--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -29,7 +29,7 @@ jobs:
           AUTH_TOKEN: ${{ secrets.AUTH_TOKEN }}
           CAKE: ${{ secrets.CAKE }}
         run: |
-          echo $AUTH_TOKEN > /home/runner/flores_plus_translation_task/src/token.json
+          #          echo $AUTH_TOKEN > /home/runner/flores_plus_translation_task/src/token.json
           echo $CAKE > cake
           python wf_test.py
           #          python update_packets.py 
