--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -27,21 +27,20 @@ jobs:
       - name: update packets 
         env:
           AUTH_TOKEN: ${{ secrets.AUTH_TOKEN }}
-          CAKE: ${{ secrets.CAKE }}
         run: |
           cd flores_plus_translation_task/src
           echo $AUTH_TOKEN > token.json
           python update_packets.py 
 
-      - name: commit files
-          run: |
-            git config --local user.email "action@github.com"
-            git config --local user.name "GitHub Action"
-            git add -A
-            git diff-index --quiet HEAD || (git commit -a -m "updated logs" --allow-empty)
-          
-      - name: push changes
-        uses: ad-m/github-push-action@v0.6.0
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: main 
+          #      - name: commit files
+          #          run: |
+          #            git config --local user.email "action@github.com"
+          #            git config --local user.name "GitHub Action"
+          #            git add -A
+          #            git diff-index --quiet HEAD || (git commit -a -m "updated logs" --allow-empty)
+          #          
+          #      - name: push changes
+          #        uses: ad-m/github-push-action@v0.6.0
+          #        with:
+          #          github_token: ${{ secrets.GITHUB_TOKEN }}
+          #          branch: main 
