--- a/website/mkdocs.yml
+++ b/website/mkdocs.yml
@@ -1,11 +1,14 @@
-site_name: Saqil Tzij
+site_name: FLORES+ Mayas
 nav: 
   - Inicio: index.md
+  - Directrices para el control de calidad:
+    - Tipología de errores: directrices/tipologia.md
+    - Aspectos por considerar: directrices/aspectos.md
   #- Vocabularios y textos paralelos: textos.md
   # - JW Crawler: jw.md
   #- FLORES-Mayas: flores.md
-  - Sobre el proyecto: about.md
-  - Cómo colaborar: colaborar.md
+  # - Sobre el proyecto: about.md
+  # - Cómo colaborar: colaborar.md
 theme:
   name: windmill
   language: es
