--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,8 +1,8 @@
 name: update_packets
 
 on:
-  schedule:     
-    - cron: '0 * * * *' 
+  # schedule:     
+  #  - cron: '0 * * * *' 
 
 jobs:
   build:
