--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -2,8 +2,8 @@ name: update_packets
 
 on:
   push:
-#  schedule:
-#    - cron: '*/3 * * * *' 
+  schedule:
+    - cron: '*/3 * * * *' 
 
 jobs:
   build:
