--- a/flores_plus_translation_task/data/config.json
+++ b/flores_plus_translation_task/data/config.json
@@ -5,7 +5,7 @@
                 "fsanchez@dlsi.ua.es",
                 "japerez@dlsi.ua.es"
             ],
-            "revisor": "vmsanchez@dlsi.ua.es"
+            "revisor": "vm.sanchez@gcloud.ua.es"
         }
     },
     "packet_size": 5
