--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,9 +1,9 @@
 name: update_packets
 
 on:
-  schedule:
-    - cron: '0 * * * *' 
-#  push:
+# schedule:
+#- cron: '0 * * * *' 
+  push:
 
 jobs:
   build:
