--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -22,14 +22,11 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt 
+
+      - name: install apertium
+        run: |
           sudo apt install apertium
           sudo apt install apertium-eng-spa
-
-      - name: download spacy model
-        run: |
-          pip install setuptools wheel
-          pip install -U spacy 
-          python -m spacy download es_core_news_sm
 
       - name: update packets 
         env:
