--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -28,6 +28,11 @@ jobs:
           sudo apt install apertium
           sudo apt install apertium-eng-spa
 
+      - name: decrypt floresp
+        run: |
+          gpg --quiet --batch --yes --decrypt --passphrase="${{ secrets.GPG_PASSPHRASE_FLORESP }}" --output flores.eng-spa.dev flores.eng-spa.dev.gpg
+          gpg --quiet --batch --yes --decrypt --passphrase="${{ secrets.GPG_PASSPHRASE_FLORESP }}" --output flores.eng-spa.devtest flores.eng-spa.devtest.gpg
+
       - name: update packets 
         env:
           AUTH_TOKEN: ${{ secrets.AUTH_TOKEN }}
