--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -50,6 +50,8 @@ jobs:
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git add -A
+          git rm --cache flores_plus_translation_task/data/flores.eng-spa.dev
+          git rm --cache flores_plus_translation_task/data/flores.eng-spa.devtest
           git diff-index --quiet HEAD || (git commit -a -m "updated logs" --allow-empty)
             
       - name: push changes
