--- a/flores_plus_translation_task/data/config.json
+++ b/flores_plus_translation_task/data/config.json
@@ -10,6 +10,6 @@
     },
     "packet_size": 100,
     "prelim_packet_size": 10,
-    "start_translation": false,
+    "start_translation": true,
     "prelim_translation": true
 }
