separating packets update from report update

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -61,3 +61,7 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           branch: main 
+
+      - name: update report
+        run: |
+          python update_report.py
