--- a/flores_plus_translation_task/data/config.json
+++ b/flores_plus_translation_task/data/config.json
@@ -6,6 +6,34 @@
                 "andres.lou@ua.es"
             ],
             "revisor": "lourios.andres@gmail.com"
+        },
+        "mam": {
+            "translators": [
+                "saqbech25@hotmail.com",
+                "vsindybeatriz@gmail.com"
+            ],
+            "revisor": "ixkikap@gmail.com"
+        },
+        "kek": {
+            "translators": [
+                "poyanam@yahoo.es",
+                "juantzoc@yahoo.com"
+            ],
+            "revisor": "equidades@gmail.com"
+        },
+        "cak": {
+            "translators": [
+                "matuyuc@gmail.com",
+                "gabrielpichiya@gmail.com"
+            ],
+            "revisor": "vasquezv7@miumg.edu.gt"
+        },
+        "quc": {
+            "translators": [
+                "osefinapos070@gmail.com",
+                "felivicente@yahoo.es"
+            ],
+            "revisor": "jrguarchaj@gmail.com"
         }
     },
     "packet_size": 100,
