--- a/flores_plus_translation_task/data/config.json
+++ b/flores_plus_translation_task/data/config.json
@@ -17,7 +17,7 @@
         "kek": {
             "translators": [
                 "poyanam@yahoo.es",
-                "juantzoc@yahoo.com"
+                "juan.tzoc@gmail.com"
             ],
             "revisor": "equidades@gmail.com"
         },
@@ -26,11 +26,10 @@
                 "matuyuc@gmail.com",
                 "gabrielpichiya@gmail.com"
             ],
-            "revisor": "vasquezv7@miumg.edu.gt"
+            "revisor": "svasquezv7@miumg.edu.gt"
         },
         "quc": {
             "translators": [
-                "osefinapos070@gmail.com",
                 "felivicente@yahoo.es"
             ],
             "revisor": "jrguarchaj@gmail.com"
