starting prelim phase

--- a/flores_plus_translation_task/data/config.json
+++ b/flores_plus_translation_task/data/config.json
@@ -9,28 +9,29 @@
         },
         "mam": {
             "translators": [
-                "saqbech25@hotmail.com",
-                "vsindybeatriz@gmail.com"
+                "xjaw1964@gmail.com",
+                "ixkikap@gmail.com"
             ],
-            "revisor": "ixkikap@gmail.com"
+            "revisor": "vsindybeatriz@gmail.com"
         },
         "kek": {
             "translators": [
-                "poyanam@yahoo.es",
-                "juan.tzoc@gmail.com"
+                "juan.tzoc@gmail.com",
+                "equidades@gmail.com"
             ],
-            "revisor": "equidades@gmail.com"
+            "revisor": "poyanam@yahoo.es"
         },
         "cak": {
             "translators": [
-                "matuyuc@gmail.com",
+                "svasquezv7@miumg.edu.gt",
                 "gabrielpichiya@gmail.com"
             ],
-            "revisor": "svasquezv7@miumg.edu.gt"
+            "revisor": "matuyuc@gmail.com"
         },
         "quc": {
             "translators": [
-                "felivicente@yahoo.es"
+                "felivicente@yahoo.es",
+		"josefinapos070@gmail.com"
             ],
             "revisor": "jrguarchaj@gmail.com"
         }
