manual update of state

--- a/flores_plus_translation_task/data/config.json
+++ b/flores_plus_translation_task/data/config.json
@@ -10,16 +10,16 @@
         "mam": {
             "translators": [
                 "xjaw1964@gmail.com",
-                "ixkikap@gmail.com"
+                "vsindybeatriz@gmail.com"
             ],
-            "revisor": "vsindybeatriz@gmail.com"
+            "revisor": "ixkikap@gmail.com"
         },
         "kek": {
             "translators": [
-                "juan.tzoc@gmail.com",
+                "poyanam@yahoo.es",
                 "equidades@gmail.com"
             ],
-            "revisor": "poyanam@yahoo.es"
+            "revisor": "juan.tzoc@gmail.com"
         },
         "cak": {
             "translators": [
