--- a/flores_plus_translation_task/data/config.json
+++ b/flores_plus_translation_task/data/config.json
@@ -9,10 +9,10 @@
         },
         "mam": {
             "translators": [
-                "xjaw1964@gmail.com",
-                "vsindybeatriz@gmail.com"
+                "ixkikap@gmail.com",
+                "princesamam16@gmail.com"
             ],
-            "revisor": "ixkikap@gmail.com"
+            "revisor": "saqpom@gmail.com"
         },
         "kek": {
             "translators": [
